--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <input type="email" id="email" name="email" required><br><br>
             <label for="message">Message:</label>
             <textarea id="message" name="message" required></textarea><br><br>
-            <input type="submit" value="Submit">
+            <input type="submit" Value="Submit">
         </form>
     </section>
 </main>
