--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 <main>
     <section>
-        <p>Tired of large piles of dirty laundry? Dont have time to do them? </b> Bring them over to us! Qinetra Laundry offers top-notch laundry services, ensuring your clothes are fresh and clean. Explore our services and experience the difference!</p>
+        <p>Tired of large piles of dirty laundry? Don't have time to do them? </b> Bring them over to us! Qinetra Laundry offers top-notch laundry services, ensuring your clothes are fresh and clean. Explore our services and experience the difference!</p>
     </section>
     <section>
         <h2>Service Completion Times</h2>
