--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <p>
             Qinetra Laundry Services is a company dedicated to providing high-quality laundry care for our customers.
 
-            We understand that laundry can be a time-consuming chore,and we are hear to help you do your laundry.
+            We understand that laundry can be a time-consuming chore,and we are here to help you do your laundry.
         </p>
         <p>
             Our team of experienced laundry professionals is for sure going to give you excellent service by ensuring your clothes are cleaned to perfection.We use high quality equipment and detergents that will clean your clothes and leave the stainless looking brand new.
