--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
         <h2>Image Gallery</h2>
         <img src="images/logo.jpg" alt="Image 3" class="service-img">
         <img src="images/laund.jpg" alt="Image 4" class="service-img">
-        <img src="images/l2.jpg" alt="Image 5" class="service-img">
+        <img src="images/l2.jpg" alt="Image " class="service-img">
     </section>
 </main>
 </div>
