--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>We offer a variety of services to meet all your laundry needs:</p>
         <ul class="services-list">
             <li>
-                <img src="images/dry.jpg" alt="Dry Cleaning" class="service-image minimized-image">
+                <img src="images/dryc.jpg" alt="Dry Cleaning" class="service-image minimized-image">
                 Dry Cleaning
             </li>
             <li>
