--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                 <img src="images/stain.jpg" alt="Stain Removal" class="service-image minimized-image">
                 Stain Removal
             </li>
+            <li>
+                <img src="images/stain.jpg" alt="Stain Removal" class="service-image minimized-image">
+                Stain Removal
+            </li>
         </ul>
     </section>
 </main>
